@@ -1,3 +1,5 @@
+2006/2/22 -- released version 20060222_trunk
+
 2006/2/21 -- released version 20060221_trunk
 
 2006/2/20 -- released version 20060220_trunk
